# SQLBot

./: .dockerignore  .gitignore  AGENTS.md  BUILD_FIX_SUMMARY.md  CODE_ANALYSIS.md  Dockerfile  Dockerfile-base  GEMINI.md  Makefile  QWEN.md  README.md  SCRIPTS.md  SQLBot_OpenAPI_接口文档.md  build.config  build_from_source.ps1  build_from_source.sh  docker-compose.local.yaml  docker-compose.yaml  project.md  quick.sh  quick_build.sh  sqlbot_log.html  start-debug.sh  start.sh  todo.md
.devcontainer/: devcontainer.json
.github/workflows/: build_and_push.yml  build_test.yml  package_and_push.yml  xpack.yml
Springboot/: README.md  plan.md
Springboot/Springboot-SQLBot-starter/: README.md  pom.xml
Springboot/Springboot2-SQLBot-example/: README.md  pom.xml
Springboot/Springboot3-SQLBot-example/: README.md  pom.xml
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  run-no-proxy.sh  template.yaml
backend/alembic/: env.py
backend/apps/: api.py
backend/locales/: en.json  ko-KR.json  zh-CN.json
backend/templates/: semantic_expansion.yaml  template.yaml
backend/test/: config.yaml  config_decrypt.py  init_and_generate_pg.py  llm_import_excel.py  tempfile_1761132741438.py  tiktoken_test.py
demo/: Dockerfile_tmp  README.md  SEALOS_WSL_INSTALL_README.md  SOLUTION_OVERVIEW.md  SQLBot.jmx  SQLBot_OpenAPI_接口文档.md  configure_docker_mirrors.sh  install_sealos_wsl.sh  install_sealos_wsl_final.sh  sealos_solution.sh
demo/demo-app/: Dockerfile
demo/sealos-build/: APP_PACKAGE_DEPLOY_GUIDE.md  Applicationfile  Clusterfile  MINIKUBE_DEPLOY_GUIDE.md  PACKING_GUIDE.md  README.md  build-config.md  build-docker-image.sh  deploy-local.sh  deploy-sqlbot.sh  deploy-validation.sh  package-app.sh  sqlbot-app.yaml  sqlbot-k8s.yaml  validate-with-minikube.sh  verify-app-package.sh
demo/sealos-demo/: BUILD_INSTRUCTIONS.md  Clusterfile  README.md  deploy-demo.sh
deploy/k8s-local/: README.md  configmap.yaml  deployment-no-pvc.yaml  deployment.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
dev/: Dockerfile.dev  Dockerfile.dev.enhanced  Dockerfile.pycharm  README.md  pycharm-dev-guide.md
docs/: ARCHITECTURE_ANALYSIS.md  BUILD.md  BUILD_GUIDE.md  DATA_AGENT_PRD.md  DEBUG.md  DEBUG_GUIDE.md  DEEP_ANALYSIS_REDESIGN.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DEVELOPMENT_GUIDE.md  FAQ.md  G2_SSR_GUIDE.md  GUIDE.md  INSTALL.md  INSTALLATION_GUIDE.md  METRIC_MODULE_DESIGN.md  OPENAPI_LLM_VS_CHAT_LLM.md  PRODUCTION_DEPLOYMENT.md  PROTOTYPE_DESIGN.md  README.en.md  README.md  REFACTOR_PLAN.md  SCRIPTS.md  SECURITY_TODO.md  Springboot-SQLBot-starter完善设计文档-第二阶段.md  Springboot-SQLBot-starter设计文档.md  USER_GUIDE.md  feat-smart-table-relation-infer.md  字典管理设计方案.md
docs/20251010/: 20201010_bug_check.md
docs/openapi/: API_接口设计与分析.md  bug修复与优化建议.md  bug修复与优化建议_已实施.md  plan接口设计文档.md
example/: README.md  advanced-floating.html  advanced-fullscreen.html  basic-floating.html  basic-fullscreen.html  config.js  index.html  server.js  start.bat  start.sh
frontend/: QWEN.md  components.d.ts  index.html  package.json  postcss.config.js  tsconfig.node.json  vite.config.ts
frontend/docs/: menu-mechanism.md  qa-custom-menu-xpack.md  qa-set-menu-permission-and-xpack.md
frontend/public/: assistant.js  swagger-ui-bundle.js
frontend/src/: main.ts  style.less
g2-ssr/: app.js
installer/: install.conf
nifi-mcp-adapter/: Dockerfile  README.md  config.py  main.py  nifi_client.py  requirements.txt  start.sh
shell/: config-examples.sh  dev-start-enhanced.sh  dev-start.sh  pull.sh  quick_tmp.sh
sqlbot-mcp-adapter/: .dockerignore  .env.example  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  QWEN_CODE_INTEGRATION.md  README.md  config.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt  sqlbot_client.py  start.sh
sqlbot-mcp-adapter/src/sqlbot_mcp_adapter/: __init__.py  config.py  main.py  mcp_server.py  models.py  simple_server.py  sqlbot_client.py
tests/: test_minimax_integration.py  test_supplier_config.py
tmp/: ai_enhanced_dashboard.html  analysis_queries.sql  execute_analysis.py  fix_query3.py  generate_charts.py  generate_enhanced_charts.py  generate_pdf_report.py  visualization_dashboard.html
(+508 files in other folders)
